// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`LoadingSentinel > renders a hidden div when not loading and no error 1`] = `
<div>
  <div
    aria-hidden="true"
    class="h-4 w-full "
  />
</div>
`;

exports[`LoadingSentinel > renders basic end of content when hasReachedEnd is true without counts 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-8 text-center "
  >
    <div
      class="text-gray-400 mb-2"
    >
      <svg
        class="w-8 h-8 mx-auto"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13l4 4L19 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <p
      class="text-sm text-gray-500 font-medium"
    >
      No more newsletters to load
    </p>
  </div>
</div>
`;

exports[`LoadingSentinel > renders end of content with counts when hasReachedEnd is true and counts are provided 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-8 text-center "
  >
    <div
      class="text-gray-400 mb-2"
    >
      <svg
        class="w-8 h-8 mx-auto"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M5 13l4 4L19 7"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
    </div>
    <p
      class="text-sm text-gray-500 font-medium"
    >
      All 50 newsletters loaded
    </p>
    <p
      class="text-xs text-gray-400 mt-1"
    >
      Showing 
      50
       of 
      50
       newsletters
    </p>
  </div>
</div>
`;

exports[`LoadingSentinel > renders error state when error is present 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-8 text-center "
  >
    <div
      class="text-red-500 mb-4"
    >
      <svg
        class="w-12 h-12 mx-auto mb-2"
        fill="none"
        stroke="currentColor"
        viewBox="0 0 24 24"
      >
        <path
          d="M12 9v2m0 4h.01m-6.938 4h13.856c1.54 0 2.502-1.667 1.732-2.5L13.732 4c-.77-.833-1.964-.833-2.732 0L3.732 16.5c-.77.833.192 2.5 1.732 2.5z"
          stroke-linecap="round"
          stroke-linejoin="round"
          stroke-width="2"
        />
      </svg>
      <p
        class="text-sm font-medium"
      >
        Failed to load more newsletters
      </p>
      <p
        class="text-xs text-gray-500 mt-1"
      >
        Failed to load
      </p>
    </div>
    <button
      class="px-4 py-2 text-sm bg-red-50 hover:bg-red-100 text-red-700 rounded-lg transition-colors"
    >
      Try Again
    </button>
  </div>
</div>
`;

exports[`LoadingSentinel > renders loading more indicator with counts when loading with counts 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-8 "
  >
    <svg
      class="lucide lucide-loader2 w-6 h-6 animate-spin text-blue-500 mb-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    <p
      class="text-sm text-gray-500 font-medium"
    >
      Loading more newsletters...
    </p>
    <p
      class="text-xs text-gray-400 mt-1"
    >
      Loaded 
      10
       of 
      100
    </p>
  </div>
</div>
`;

exports[`LoadingSentinel > renders loading spinner when loading is true 1`] = `
<div>
  <div
    class="flex flex-col items-center justify-center py-8 "
  >
    <svg
      class="lucide lucide-loader2 w-6 h-6 animate-spin text-blue-500 mb-3"
      fill="none"
      height="24"
      stroke="currentColor"
      stroke-linecap="round"
      stroke-linejoin="round"
      stroke-width="2"
      viewBox="0 0 24 24"
      width="24"
      xmlns="http://www.w3.org/2000/svg"
    >
      <path
        d="M21 12a9 9 0 1 1-6.219-8.56"
      />
    </svg>
    <p
      class="text-sm text-gray-500 font-medium"
    >
      Loading more newsletters...
    </p>
  </div>
</div>
`;
